--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <div class="container">
     <div class="hero">
-      <img src="https://chatgpt-image-hosting.s3.ap-south-1.amazonaws.com/skinmantra_2.webp" alt="SkinMantra Hero Image">
+      <img src="Phone storage/Download/IMG-20250731-WA0000.jpg" alt="SkinMantra Hero Image">
     </div>
 
     <h1>India’s Trusted Personalized AI Skincare Routine</h1>
@@ -88,7 +88,7 @@
     </div>
 
     <div class="trust-img">
-      <img src="https://chatgpt-image-hosting.s3.ap-south-1.amazonaws.com/skinmantra.webp" alt="AI skincare proof image">
+      <img src="Phone storage/Download/IMG-20250731-WA0001.jpg" alt="AI skincare proof image">
     </div>
 
     <p>
