--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     }
     footer {
       text-align: center;
-      padding: 30px 10px;
+      padding: 30px 10px;alt="SkinMantra
       font-size: 14px;
       color: #999;
     }
@@ -67,7 +67,7 @@
 
   <div class="container">
     <div class="hero">
-      <img src="Phone storage/Download/IMG-20250731-WA0000.jpg" alt="SkinMantra Hero Image">
+      <img src="IMG-20250731-WA0000.jpg" alt="SkinMantra Hero Image" style="max-width:100%; border-radius:15px;">
     </div>
 
     <h1>India’s Trusted Personalized AI Skincare Routine</h1>
@@ -88,7 +88,7 @@
     </div>
 
     <div class="trust-img">
-      <img src="Phone storage/Download/IMG-20250731-WA0001.jpg" alt="AI skincare proof image">
+      <img src="IMG-20250731-WA0001.jpg" alt="AI Skincare Proof Image" style="max-width:100%; border-radius:15px;">
     </div>
 
     <p>
